--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: ./maven clean install
+        run: mvn -B package --file pom.xml
 
       - name: 'Build and push image'
         uses: azure/docker-login@v1
