--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
           azure-subscription: ${{ env.AZURE_SUBSCRIPTION }}
           action: deploy
           service-name: spring-app-one
-          app-name: action-demo-one
+          app-name: demo-api-one
           deployment-name: default
           container-registry: apiimage.azurecr.io
           registry-username: ${{ secrets.REGISTRY_USERNAME }}
